--- a/ProvaProgWeb/style.css
+++ b/ProvaProgWeb/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-
+.maintitle 
 body{
  
 
@@ -33,6 +33,8 @@ header{
     height: calc(100vh - 10px);
     
 }
+
+
 
 header nav{
     display: flex;
